--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,16 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Order your favorite pizza Now! We deliver the best pizza in town."
+    />
+    <meta
+      name="keywords"
+      content="Pizza, Delivery, Order, Food, Fast Food, Restaurant, MERN, MongoDB, Express, React, NodeJS"
+    />
+    <meta name="author" content="Pizza Delivery App" />
+
     <title>Pizza Delivery App | MERN</title>
   </head>
   <body>
