Added: Layout, Navbar & Footer

--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,9 @@
       name="keywords"
       content="Pizza, Delivery, Order, Food, Fast Food, Restaurant, MERN, MongoDB, Express, React, NodeJS"
     />
-    <meta name="author" content="Pizza Delivery App" />
+    <meta name="author" content="Pizza Pallete" />
 
-    <title>Pizza Delivery App | MERN</title>
+    <title>Pizza Pallete | MERN</title>
   </head>
   <body>
     <div id="root"></div>
