Added: CartModal Component

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     />
     <meta name="author" content="Pizza Pallete" />
 
-    <title>Pizza Pallete | MERN</title>
+    <title>Pizza Palette | MERN</title>
   </head>
   <body>
     <div id="root"></div>
