Added: Vite PWA Configs

--- a/client/index.html
+++ b/client/index.html
@@ -2,22 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Primary Meta Tags -->
+    <title>Pizza Palette | MERN</title>
+    <meta name="title" content="Pizza Palette | MERN" />
     <meta
       name="description"
       content="Order your favorite pizza Now! We deliver the best pizza in town."
     />
-    <meta
-      name="keywords"
-      content="Pizza, Delivery, Order, Food, Fast Food, Restaurant, MERN, MongoDB, Express, React, NodeJS"
-    />
-    <meta name="author" content="Pizza Pallete" />
 
-    <title>Pizza Palette | MERN</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://pizza-palette-app-mern.vercel.app/"
+    />
+    <meta property="og:title" content="Pizza Palette | MERN" />
+    <meta
+      property="og:description"
+      content="Order your favorite pizza Now! We deliver the best pizza in town."
+    />
+    <meta property="og:image" content="/images/screen1.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://pizza-palette-app-mern.vercel.app/"
+    />
+    <meta property="twitter:title" content="Pizza Palette | MERN" />
+    <meta
+      property="twitter:description"
+      content="Order your favorite pizza Now! We deliver the best pizza in town."
+    />
+    <meta property="twitter:image" content="/images/screen1.png" />
   </head>
   <body>
     <div id="root"></div>
