Added: Google Analytics Scripts

--- a/client/index.html
+++ b/client/index.html
@@ -45,5 +45,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F33HQ0L1PC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F33HQ0L1PC');
+</script>
   </body>
 </html>
